# egml

./: .gitignore  Cargo.toml  README.md
crates/egml/: Cargo.toml  README.md
crates/egml-cli/: Cargo.toml  README.md
crates/egml-cli/src/: main.rs
crates/egml-core/: Cargo.toml  README.md
crates/egml-core/src/: error.rs  lib.rs  ops.rs
crates/egml-core/src/base/: id.rs  mod.rs
crates/egml-core/src/geometry/: direct_position.rs  envelope.rs  linear_ring.rs  mod.rs  multi_surface.rs  point.rs
crates/egml-core/src/geometry/aggregates/: mod.rs  multi_surface.rs
crates/egml-core/src/geometry/primitives/: linear_ring.rs  polygon.rs  solid.rs  triangle.rs  triangulated_surface.rs
crates/egml-core/src/model/: abstract_object.rs  abstract_object_kind.rs  mod.rs
crates/egml-core/src/model/base/: abstract_gml.rs  abstract_gml_kind.rs  association_attributes.rs  association_attributes_access.rs  gml.rs  id.rs  mod.rs  ownership_attributes.rs  ownership_attributes_access.rs  reference.rs
crates/egml-core/src/model/basic/: code.rs  measure.rs  mod.rs  nil_reason.rs
crates/egml-core/src/model/basic_types/: code.rs  measure.rs  nil_reason.rs  nil_reason_enumeration.rs
crates/egml-core/src/model/common/: apply_transform.rs  compute_envelope.rs  geometry_type.rs  has_geometry_type.rs  iter_geometries.rs  mod.rs  recompute_bounding_shape.rs  triangulate.rs
crates/egml-core/src/model/feature/: abstract_feature.rs  abstract_feature_kind.rs  bounding_shape.rs  mod.rs
crates/egml-core/src/model/geometry/: abstract_geometry.rs  abstract_geometry_array_property.rs  abstract_geometry_kind.rs  abstract_geometry_property.rs  direct_position.rs  direct_position_list.rs  envelope.rs  mod.rs
crates/egml-core/src/model/geometry/aggregates/: abstract_geometric_aggregate.rs  abstract_geometric_aggregate_kind.rs  aggregation_type.rs  mod.rs  multi_curve.rs  multi_curve_property.rs  multi_geometry.rs  multi_geometry_property.rs  multi_point.rs  multi_point_property.rs  multi_surface.rs  multi_surface_property.rs
crates/egml-core/src/model/geometry/complexes/: composite_surface.rs  mod.rs
crates/egml-core/src/model/geometry/primitives/: abstract_curve.rs  abstract_curve_kind.rs  abstract_curve_property.rs  abstract_geometric_primitive.rs  abstract_geometric_primitive_kind.rs  abstract_ring.rs  abstract_ring_kind.rs  abstract_ring_property.rs  abstract_solid.rs  abstract_solid_kind.rs  abstract_surface.rs  abstract_surface_kind.rs  abstract_surface_patch.rs  abstract_surface_patch_array_property.rs  abstract_surface_patch_kind.rs  abstract_surface_property.rs  curve_kind.rs  curve_property.rs  line_string.rs  linear_ring.rs  linear_ring_property.rs  mod.rs  point.rs  point_array_property.rs  point_property.rs  polygon.rs  polygon_patch.rs  ring_kind.rs  ring_property.rs  shell.rs  shell_property.rs  solid.rs  solid_property.rs  surface.rs  surface_interpolation.rs  surface_kind.rs  surface_patch_array_property.rs  triangle.rs  (+3 more)
crates/egml-core/src/model/measures/: angle.rs  area.rs  grid_length.rs  length.rs  mod.rs  scale.rs  speed.rs  time.rs  volume.rs
crates/egml-core/src/model/xlink/: actuate_type.rs  href.rs  mod.rs  show_type.rs
crates/egml-core/src/operations/: geometry.rs  mod.rs  surface.rs  triangulate.rs
crates/egml-core/src/resolver/: geometry_resolver.rs  mod.rs
crates/egml-core/src/util/: mod.rs  plane.rs  triangulate.rs
crates/egml-core/tests/: lib.rs
crates/egml-core/tests/geometry/: direct_position.rs  envelope.rs  mod.rs
crates/egml-core/tests/geometry/primitives/: mod.rs  triangle.rs
crates/egml-core/tests/model/: mod.rs
crates/egml-core/tests/model/base/: id.rs
crates/egml-core/tests/model/geometry/: direct_position.rs  envelope.rs  mod.rs
crates/egml-core/tests/operations/: mod.rs  surface.rs
crates/egml-io/: Cargo.toml  README.md
crates/egml-io/src/: error.rs  lib.rs  util.rs
crates/egml-io/src/base/: abstract_gml.rs  gml_name.rs  mod.rs
crates/egml-io/src/basic/: code.rs  measure.rs  mod.rs
crates/egml-io/src/codec/: abstract_object.rs  mod.rs
crates/egml-io/src/codec/base/: abstract_gml.rs  association_attributes.rs  mod.rs  ownership_attributes.rs  reference.rs
crates/egml-io/src/codec/basic/: code.rs  measure.rs  mod.rs
crates/egml-io/src/codec/feature/: abstract_feature.rs  bounding_shape.rs  mod.rs
crates/egml-io/src/codec/geometry/: abstract_geometry.rs  abstract_geometry_array_property.rs  abstract_geometry_kind.rs  abstract_geometry_property.rs  direct_position.rs  direct_position_list.rs  envelope.rs  mod.rs
crates/egml-io/src/codec/measures/: angle.rs  area.rs  grid_length.rs  length.rs  mod.rs  scale.rs  speed.rs  time.rs  volume.rs
crates/egml-io/src/feature/: abstract_feature.rs  bounding_shape.rs
crates/egml-io/src/geometry/: direct_position.rs  direct_position_list.rs  envelope.rs  linear_ring.rs  mod.rs  multi_surface.rs  point.rs  polygon.rs  solid.rs
crates/egml-io/src/geometry/aggregates/: mod.rs  multi_curve.rs  multi_curve_property.rs  multi_point.rs  multi_point_property.rs  multi_surface.rs  multi_surface_property.rs
crates/egml-io/src/geometry/complexes/: composite_surface.rs
crates/egml-io/src/geometry/primitives/: abstract_curve.rs  abstract_ring.rs  abstract_ring_property.rs  abstract_surface.rs  abstract_surface_patch.rs  curve_property.rs  line_string.rs  linear_ring.rs  linear_ring_property.rs  mod.rs  point.rs  point_array_property.rs  point_property.rs  polygon.rs  polygon_patch.rs  ring.rs  ring_kind.rs  ring_property.rs  shell.rs  shell_property.rs  solid.rs  solid_property.rs  surface.rs  surface_patch_array_property.rs  surface_property.rs  triangle.rs  triangulated_surface.rs  triangulated_surface_property.rs
crates/egml-io/src/util/: formatting.rs  geometry_repair.rs  gml_element.rs  mod.rs  serde_helpers.rs  xml_element.rs  xml_element_reader.rs  xml_element_writer.rs
crates/egml-transform/: Cargo.toml  README.md
crates/egml-transform/src/: error.rs  lib.rs  offset.rs  triangulate.rs
crates/egml-transform/tests/: offset.rs  triangulate.rs
crates/egml/src/: lib.rs
(+60 files in other folders)
