[workspace]
members = [
    "crates/*"
]

resolver = "2"

[workspace.package]
version = "0.0.1-alpha.11"
authors = ["Benedikt Schwab <benedikt.schwab@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/envis-space/egml"

[workspace.dependencies]
thiserror = "2.0.17"
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
nalgebra = "0.34.1"
parry3d-f64 = "0.25.1"
serde = "1.0.228"
quick-xml = "0.38.3"
geo = "0.31.0"
itertools = "0.14.0"
rayon = "1.11.0"
approx = "0.5.1"
uuid = "1.18.1"
sha2 = "0.10.9"
earcut = "0.4.4"
