[workspace]
members = [
    "crates/*"
]

resolver = "2"

[workspace.package]
version = "0.0.1-alpha.13"
authors = ["Benedikt Schwab <benedikt.schwab@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/envis-space/egml"

[workspace.dependencies]
thiserror = "2.0.18"
anyhow = "1.0.101"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
nalgebra = "0.34.1"
parry3d-f64 = "0.26.0"
serde = "1.0.228"
quick-xml = "0.39.0"
geo = "0.32.0"
itertools = "0.14.0"
rayon = "1.11.0"
approx = "0.5.1"
uuid = "1.20.0"
sha2 = "0.10.9"
earcut = "0.4.5"
libc = "0.2.181"
cbindgen = "0.29.2"
