[workspace]
members = [
    "crates/*"
]

resolver = "2"

[workspace.package]
version = "0.0.2-alpha.5"
authors = ["Benedikt Schwab <benedikt.schwab@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["science::geo", "data-structures", "parser-implementations"]
keywords = ["gml", "geospatial", "3d", "geometry", "ogc"]
repository = "https://github.com/envis-space/egml"


[workspace.dependencies]
thiserror = "2.0.18"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
nalgebra = "0.34.2"
parry3d-f64 = "0.28.0"
serde = "1.0.228"
quick-xml = "0.40.1"
geo = "0.33.1"
itertools = "0.14.0"
rayon = "1.12.0"
approx = "0.5.1"
uuid = "1.23.2"
sha2 = "0.11.0"
earcut = "0.4.10"
libc = "0.2.186"
cbindgen = "0.29.3"
strum = "0.28.0"
strum_macros = "0.28.0"
auto_enums = "0.8.8"
