[package]
name = "egml-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for processing GML data."


[dependencies]
egml = { version = "0.0.1-alpha.9", path = "../egml" }

thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


[[bin]]
name = "egml"
path = "src/main.rs"
