[package]
name = "egml-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
description = "CLI tool for processing GML data."


[dependencies]
egml = { version = "0.0.2-alpha.1", path = "../egml" }

thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
