[package]
name = "egml-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core primitives and operations for processing GML data."

[dependencies]
thiserror = { workspace = true }
nalgebra = { workspace = true }
parry3d-f64 = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
approx = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
sha2 = { workspace = true }
