[package]
name = "egml-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
description = "Core primitives and operations for processing GML data."


[dependencies]
thiserror = { workspace = true }
nalgebra = { workspace = true }
parry3d-f64 = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
approx = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5", "v7"] }
sha2 = { workspace = true }
earcut = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
auto_enums = { workspace = true }
