[package]
name = "egml-io"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "IO of the egml library"


[dependencies]
egml-core = { version = "0.0.1-alpha.1", path = "../egml-core", registry = "custom" }

thiserror = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
quick-xml = { workspace = true, features = [ "serialize" ] }
nalgebra = { workspace = true }
# parry3d-f64 = { workspace = true, features = ["f64"] }

