[package]
name = "egml-io"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "IO operations for processing GML data."


[dependencies]
egml-core = { version = "0.0.1-alpha.13", path = "../egml-core" }

thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
quick-xml = { workspace = true, features = ["serialize", "overlapped-lists"] }
nalgebra = { workspace = true }
# parry3d-f64 = { workspace = true, features = ["f64"] }
sha2 = { workspace = true }
tracing = { workspace = true }
