[package]
name = "egml-transform"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
description = "Supplementary operations for GML data."


[dependencies]
egml-core = { version = "0.0.2-alpha.1", path = "../egml-core" }

thiserror = { workspace = true }
nalgebra = { workspace = true }
itertools = { workspace = true }
