[package]
name = "egml"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for processing GML data."

[dependencies]
egml-core = { version = "0.0.1-alpha.8", path = "../egml-core" }
egml-io = { version = "0.0.1-alpha.8", path = "../egml-io" }
egml-transform = { version = "0.0.1-alpha.8", path = "../egml-transform" }
