[package]
name = "egml"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
description = "Library for processing GML data."


[dependencies]
egml-core = { version = "0.0.2-alpha.1", path = "../egml-core" }
egml-io = { version = "0.0.2-alpha.1", path = "../egml-io" }
egml-transform = { version = "0.0.2-alpha.1", path = "../egml-transform" }
